--- a/index.html
+++ b/index.html
@@ -1,49 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>WeatherCast</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header>
-            <h1>🌤️ WeatherCast 🌤️</h1> 
+      <h1>🌤️ WeatherCast 🌤️</h1>
     </header>
-<main>
-
-    <!-- Search for city search bar section -->
-     <div class="search">
+    <main>
+      <!-- Search for city search bar section -->
+      <div class="search">
         <section>
-            <div class="search">
-                <form id="form">
-                    <label for="search-bar"><b>Search by City</b></label>
-                    <br>
-                    <input id="search-bar" type="text" placeholder="Enter your search here...">
-                    <button type="submit" id="submit">Search</button>
-                </form>
-            </div>
+          <div class="search-section">
+            <form id="form">
+              <label for="search-bar"><b>Search by City</b></label>
+              <br />
+              <input
+                id="search-bar"
+                name="city"
+                type="text"
+                placeholder="Enter your search here..."
+              />
+              <button type="submit" id="submit">Search</button>
+            </form>
+          </div>
         </section>
-    </div>
+      </div>
 
-     <!-- City search results -->
-    <div class="search-results"> 
-        
+      <!-- City search results -->
+      <div class="search-results">
         <!-- Section to host user searched weather forecasts by city results. -->
-        <section id="dashboard"> 
-            <div class="container">
-                <div class="weather-forecast">
-                    <h2> Search for latest weather forecast by city</h2>
-                    <div class="weather-forecast">
-                        <p>Temp: <span id="temp-day-0"></span></p>
-                        <p>Humidity: <span id="humidity-day-0"></span></p>
-                        <p>Wind: <span id="wind-day-0"></span></p>
-                    </div>
-                </div>
+        <section id="dashboard">
+          <div class="container">
+            <div class="weather-forecast">
+              <h2>Search for latest weather forecast by city</h2>
+              <div class="weather-forecast">
+                <p>Temp: <span id="temp-day-0"></span></p>
+                <p>Humidity: <span id="humidity-day-0"></span></p>
+                <p>Wind: <span id="wind-day-0"></span></p>
+              </div>
             </div>
+          </div>
         </section>
 
+        <!-- 5-day forecast cards section -->
+        <section id="five-day-forecast">
+          <h3 class="forecast-header">
+            Here's your forecast by city for the next five days!
+          </h3>
+          <div class="forecast-container">
+            <!-- Each article is a day of the 5 day forecast. -->
+            <article class="forecast-card">
+              <h4 class="date">Day 1</h4>
+              <div class="weather-forecast">
+                <p>Temp: <span id="temp-day-1"></span></p>
+                <p>Humidity: <span id="humidity-day-1"></span></p>
+                <p>Wind: <span id="wind-day-1"></span></p>
+              </div>
+            </article>
+
+            <article class="forecast-card">
+              <h4 class="date">Day 2</h4>
+              <div class="weather-forecast">
+                <p>Temp: <span id="temp-day-2"></span></p>
+                <p>Humidity: <span id="humidity-day-2"></span></p>
+                <p>Wind: <span id="wind-day-2"></span></p>
+              </div>
+            </article>
+
+            <article class="forecast-card">
+              <h4 class="date">Day 3</h4>
+              <div class="weather-forecast">
+                <p>Temp: <span id="temp-day-3"></span></p>
+                <p>Humidity: <span id="humidity-day-3"></span></p>
+                <p>Wind: <span id="wind-day-3"></span></p>
+              </div>
+            </article>
+
+            <article class="forecast-card">
+              <h4 class="date">Day 4</h4>
+              <div class="weather-forecast">
+                <p>Temp: <span id="temp-day-4"></span></p>
+                <p>Humidity: <span id="humidity-day-4"></span></p>
+                <p>Wind: <span id="wind-day-4"></span></p>
+              </div>
+            </article>
+
+            <article class="forecast-card">
+              <h4 class="date">Day 5</h4>
+              <div class="weather-forecast">
+                <p>Temp: <span id="temp-day-5"></span></p>
+                <p>Humidity: <span id="humidity-day-5"></span></p>
+                <p>Wind: <span id="wind-day-5"></span></p>
+              </div>
+            </article>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <script src="./assets/js/script.js"></script>
+  </body>
+</html>
