--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 type="text"
                 placeholder="Enter your search here..."
               />
-              <button type="submit" id="submit">Search</button>
+              <button type="submit" id="submitted">Search</button>
             </form>
           </div>
         </section>
