--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <div class="weather-forecast">
                 <div id="cityname"></div>
                 <div id="currentdate"></div>
-                <p>Temp: <span id="temp-day-0"></span></p>
+                <p>Temperature: <span id="temp-day-0"></span></p>
                 <br />
                 <p>Humidity: <span id="humidity-day-0"></span></p>
                 <br />
@@ -64,7 +64,7 @@
             <article class="forecast-card">
               <h4 class="date">Day 1</h4>
               <div class="weather-forecast">
-                <p>Temp: <span id="temp-day-1"></span></p>
+                <p>Temperature: <span id="temp-day-1"></span></p>
                 <p>Humidity: <span id="humidity-day-1"></span></p>
                 <p>Wind: <span id="wind-day-1"></span></p>
               </div>
@@ -73,7 +73,7 @@
             <article class="forecast-card">
               <h4 class="date">Day 2</h4>
               <div class="weather-forecast">
-                <p>Temp: <span id="temp-day-2"></span></p>
+                <p>Temperature: <span id="temp-day-2"></span></p>
                 <p>Humidity: <span id="humidity-day-2"></span></p>
                 <p>Wind: <span id="wind-day-2"></span></p>
               </div>
@@ -82,7 +82,7 @@
             <article class="forecast-card">
               <h4 class="date">Day 3</h4>
               <div class="weather-forecast">
-                <p>Temp: <span id="temp-day-3"></span></p>
+                <p>Temperature: <span id="temp-day-3"></span></p>
                 <p>Humidity: <span id="humidity-day-3"></span></p>
                 <p>Wind: <span id="wind-day-3"></span></p>
               </div>
@@ -91,7 +91,7 @@
             <article class="forecast-card">
               <h4 class="date">Day 4</h4>
               <div class="weather-forecast">
-                <p>Temp: <span id="temp-day-4"></span></p>
+                <p>Temperature: <span id="temp-day-4"></span></p>
                 <p>Humidity: <span id="humidity-day-4"></span></p>
                 <p>Wind: <span id="wind-day-4"></span></p>
               </div>
@@ -100,7 +100,7 @@
             <article class="forecast-card">
               <h4 class="date">Day 5</h4>
               <div class="weather-forecast">
-                <p>Temp: <span id="temp-day-5"></span></p>
+                <p>Temperature: <span id="temp-day-5"></span></p>
                 <p>Humidity: <span id="humidity-day-5"></span></p>
                 <p>Wind: <span id="wind-day-5"></span></p>
               </div>
