--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         <section id="dashboard">
           <div class="container">
             <div>
-              <h2>Search for latest weather forecast by city</h2>
+              <h2>
+                Search by city to get the most up to date weather for today's
+                forecast
+              </h2>
               <div class="weather-forecast">
                 <div id="cityname"></div>
                 <div id="currentdate"></div>
                 <p>Temperature: <span id="temp-day-0"></span></p>
-                <br />
                 <p>Humidity: <span id="humidity-day-0"></span></p>
-                <br />
                 <p>Wind: <span id="wind-day-0"></span></p>
-                <br />
               </div>
             </div>
           </div>
@@ -57,7 +57,7 @@
         <!-- 5-day forecast cards section -->
         <section id="five-day-forecast">
           <h3 class="forecast-header">
-            Here's your forecast by city for the next five days!
+            Here's your city's forecast for the next five days!
           </h3>
           <div class="forecast-container">
             <!-- Each article is a day of the 5 day forecast. -->
